--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=eDP-1,1920x1200@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar & dunst & gammastep & laptopidle
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar & dunst & wlsunset & laptop-idle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -42,9 +42,7 @@ general {
 
     gaps_in = 5
     gaps_out = 20
-    border_size = 2
-    col.active_border = 0xffb4befe
-    col.inactive_border = 0xff45475a
+    border_size = 0
 
     layout = dwindle
 }
@@ -52,17 +50,26 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    active_opacity = 1
+    active_opacity = 1.0
     inactive_opacity = 0.9
     fullscreen_opacity = 1
 
     rounding = 10
-    # blur = false
-    drop_shadow = false
-    # blur_size = 7
-    # blur_passes = 2
-    # blur_new_optimizations = on
+
+    blur {
+        enabled = true
+        size = 5
+        passes = 2
+        
+        vibrancy = 0.1696
+    }
+
+    drop_shadow = true
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
 }
+
 
 animations {
     enabled = yes
@@ -113,14 +120,14 @@ $mainMod = SUPER
 bind = $mainMod, Q, killactive,
 bind = $mainMod, RETURN, exec, $TERMINAL
 bind = $mainMod, W, exec, $BROWSER
-bind = $mainMod, SPACE, exec, fuzzel
+bind = $mainMod, SPACE, exec, tofi-drun --drun-launch=true
 bind = $mainMod, B, exec, $TERMINAL -e newsboat
 bind = $mainMod, E, exec, $TERMINAL -e lf
 bind = $mainMod, N, exec, $TERMINAL -e nvim ~/documents/vimwiki/index.md
 
 bind = $mainMod SHIFT, F, togglefloating, 
 bind = $mainMod, F, fullscreen, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, X, exec, powermenu
 
 bind = $mainMod, ESCAPE, exec, pkill waybar; waybar & disown
 
@@ -129,14 +136,14 @@ bind = $mainMod, ESCAPE, exec, pkill waybar; waybar & disown
 #bind = , XF86AudioNext, exec, playerctl next
 #bind = , XF86AudioPlay, exec, playerctl play-pause
 #
-bind = , XF86MonBrightnessUp, exec, changebrightness up
-bind = , XF86MonBrightnessDown, exec, changebrightness down
+binde = , XF86MonBrightnessUp, exec, backlight up
+binde = , XF86MonBrightnessDown, exec, backlight down
 bind = , XF86Messenger, exec, playerctl previous
 bind = , XF86Go, exec, playerctl play-pause
 bind = , Cancel, exec, playerctl next
-bind = , XF86AudioRaiseVolume, exec, changevolume up
-bind = , XF86AudioLowerVolume, exec, changevolume down
-bind = , XF86AudioMute, exec, changevolume mute
+binde = , XF86AudioRaiseVolume, exec, volume up
+binde = , XF86AudioLowerVolume, exec, volume down
+bind = , XF86AudioMute, exec, volume mute
 
 # Screenshots
 bind = , Print, exec, screenshot-wayland
@@ -186,3 +193,5 @@ bindm = $mainMod, mouse:273, resizewindow
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 windowrule=tile,^(kitty)$
+windowrule=opacity 0.98 0.9,^(kitty)$
+layerrule = blur,launcher
