Add grimblast for screenshots

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -146,8 +146,8 @@ binde = , XF86AudioLowerVolume, exec, volume down
 bind = , XF86AudioMute, exec, volume mute
 
 # Screenshots
-bind = , Print, exec, screenshot-wayland
-bind = SHIFT, Print, exec, screenshot-wayland select
+bind = , Print, exec, grimblast --notify save screen
+bind = SHIFT, Print, exec, grimblast --notify save area
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
