--- a/.config/systemd/user/battery-alert.service
+++ b/.config/systemd/user/battery-alert.service
@@ -3,7 +3,7 @@ Description=Desktop alert warning of low remaining battery
 
 [Service]
 Type=oneshot
-ExecStart=/home/eric/.local/bin/battery-alert
+ExecStart=%h/.local/bin/battery-alert
 
 [Install]
 WantedBy=graphical.target
