Add lockscreen and idle scripts

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=eDP-1,1920x1200@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar & wlsunset & laptop-idle
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar & gammastep & laptop-idle
 exec-once = dunst -config <(envsubst < ~/.config/dunst/dunstrc)
 
 # Source a file (multi-file configs)
@@ -183,6 +183,10 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Example special workspace (scratchpad)
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -190,6 +194,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+bindl=,switch:Lid Switch,exec,systemctl suspend
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
