Add window rules for media viewers

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -199,6 +199,10 @@ bindl=,switch:Lid Switch,exec,systemctl suspend
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
+windowrule=float,^(imv)$
+windowrule=center,^(MuPDF)$
+windowrule=float,^(MuPDF)$
+windowrule=float,^(mpv)$
 windowrule=tile,^(kitty)$
 windowrule=opacity 0.98 0.9,^(kitty)$
 layerrule = blur,launcher
