Add keybinds to move and resize windows

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -156,6 +156,21 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+# Move windows
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, j, movewindow, d
+
+# Resize windows
+bind = $mainMod CONTROL, h, resizeactive, -40 0
+bind = $mainMod CONTROL, l, resizeactive, 40 0
+bind = $mainMod CONTROL, k, resizeactive, 0 -40
+bind = $mainMod CONTROL, j, resizeactive, 0 40
+
+# Center floating window
+bind = $mainMod, c, centerwindow
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
