Update hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ monitor=eDP-1,1920x1200@60,0x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-# Execute your favorite apps at launch
+#  Execute your favorite apps at launch
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar & gammastep & playerctld daemon
 exec-once = dunst -config <(envsubst < ~/.config/dunst/dunstrc)
 
@@ -53,10 +53,11 @@ decoration {
 
     blur {
         enabled = true
-        size = 5
-        passes = 2
+        size = 8
+        passes = 4
         
         vibrancy = 0.1696
+        ignore_opacity = true
     }
 
     drop_shadow = true
@@ -113,12 +114,11 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, RETURN, exec, $TERMINAL
 bind = $mainMod, W, exec, $BROWSER
 bind = $mainMod, SPACE, exec, tofi-drun --drun-launch=true
-bind = $mainMod, B, exec, $TERMINAL -e newsboat
-bind = $mainMod, E, exec, $TERMINAL -e lf
-bind = $mainMod, N, exec, $TERMINAL -e nvim ~/documents/vimwiki/index.md
+bind = $mainMod, E, exec, $TERMINAL lf
 
 bind = $mainMod SHIFT, F, togglefloating, 
 bind = $mainMod, F, fullscreen, 
+bind = $mainMod SHIFT, C, exec, hyprpicker -a
 bind = $mainMod, X, exec, powermenu
 
 bind = $mainMod, ESCAPE, exec, pkill waybar; waybar & disown
@@ -208,6 +208,6 @@ windowrule=float,^(imv)$
 windowrule=center,^(MuPDF)$
 windowrule=float,^(MuPDF)$
 windowrule=float,^(mpv)$
-windowrule=tile,^(kitty)$
-windowrule=opacity 0.98 0.9,^(kitty)$
+windowrule=tile,^(foot)$
+windowrule=opacity 0.8 0.9,^(foot)$
 layerrule = blur,launcher
