Switch to hyprlock and hypridle for lockscreen and idle script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ monitor=eDP-1,1920x1200@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 #  Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar & gammastep & playerctld daemon
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & hypridle & waybar & gammastep & playerctld daemon
 exec-once = dunst -config <(envsubst < ~/.config/dunst/dunstrc)
 
 # Source a file (multi-file configs)
