Add clipboard manager and emoji selector script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ monitor=eDP-1,1920x1200@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 #  Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & hypridle & waybar & gammastep & playerctld daemon
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & hypridle & waybar & gammastep & playerctld daemon & wl-paste --type text --watch cliphist store
 exec-once = dunst -config <(envsubst < ~/.config/dunst/dunstrc)
 
 # Source a file (multi-file configs)
@@ -118,7 +118,9 @@ bind = $mainMod, E, exec, $TERMINAL lf
 
 bind = $mainMod SHIFT, F, togglefloating, 
 bind = $mainMod, F, fullscreen, 
+bind = $mainMod SHIFT, E, exec, tofi-emoji
 bind = $mainMod SHIFT, C, exec, hyprpicker -a
+bind = $mainMod SHIFT, V, exec, tofi-clip
 bind = $mainMod, X, exec, powermenu
 
 bind = $mainMod, ESCAPE, exec, pkill waybar; waybar & disown
