Change wallpaper script to support hyprlock

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/.local/share/wall.jpg
-wallpaper = eDP-1,~/.local/share/wall.jpg
+preload = ~/.local/share/wall.png
+wallpaper = eDP-1,~/.local/share/wall.png
 splash = false
 ipc = off
